[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_small2.png" type="Texture" id=1]
[ext_resource path="res://Juego/Sonidos/Audio/MeteoritoExplosion.ogg" type="AudioStream" id=2]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_small1.png" type="Texture" id=3]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_tiny1.png" type="Texture" id=4]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_tiny2.png" type="Texture" id=5]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_med1.png" type="Texture" id=6]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/meteorBrown_med3.png" type="Texture" id=7]
[ext_resource path="res://Juego/Explosiones/ExplosionMeteorito/ExplosionMeteorito.gd" type="Script" id=8]

[sub_resource type="Animation" id=2]
resource_name = "destruccion_2"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteMed1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2.38419e-07, -8 ), Vector2( 1, -19 ), Vector2( -3, -38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSmall1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14, -11 ), Vector2( 27, -24 ), Vector2( 39, -36 ), Vector2( 51, -44 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSmall2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -14, 12 ), Vector2( -29, 13 ), Vector2( -52, 19 ), Vector2( -87, 34 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteTiny1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 9 ), Vector2( 25, 27 ), Vector2( 48, 28 ), Vector2( 80, 25 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteTiny2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -15, -12 ), Vector2( -29, -22 ), Vector2( -41, -29 ), Vector2( -55, -37 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpriteMed1:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 38.554, 113.999, 196.637 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpriteMed1:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.68, 0.68 ), Vector2( 0.523596, 0.523596 ), Vector2( 0.222999, 0.222999 ), Vector2( 0.146348, 0.146348 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpriteSmall1:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -41.7755, -97.2255, -158.783 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpriteSmall1:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.4, 0.4 ), Vector2( 0.196557, 0.196557 ), Vector2( 0.130316, 0.130316 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpriteSmall2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -69.2118, -141.052, -232.298 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpriteSmall2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.799999, 0.799999 ), Vector2( 0.599999, 0.599999 ), Vector2( 0.338228, 0.338228 ), Vector2( 0.233193, 0.233193 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SpriteTiny1:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -54.7225, -111.127, -185.658 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("SpriteTiny1:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.734768, 0.734768 ), Vector2( 0.496633, 0.496633 ), Vector2( 0.271124, 0.271124 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("SpriteTiny2:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -196.904, -133.73, -237.705 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SpriteTiny2:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.758738, 0.758738 ), Vector2( 0.619232, 0.619232 ), Vector2( 0.309502, 0.309502 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("SpriteTiny2:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("SpriteTiny1:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("SpriteSmall2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("SpriteMed1:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("SpriteSmall1:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("SpriteMed2:position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 11 ), Vector2( 1, 19 ), Vector2( -7.15256e-07, 47 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("SpriteMed2:rotation_degrees")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -95.588, -145.42, -135.548 ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("SpriteMed2:scale")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.594111, 0.594111 ), Vector2( 0.263133, 0.263133 ), Vector2( 0.208922, 0.208922 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("SpriteMed2:visible")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/24/type = "audio"
tracks/24/path = NodePath("DestruccionSFX")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( -0.6 )
}

[node name="ExplosionMeteorito" type="Node2D"]
rotation = 0.951678
script = ExtResource( 8 )

[node name="SpriteMed1" type="Sprite" parent="."]
scale = Vector2( 0.68, 0.68 )
texture = ExtResource( 6 )

[node name="SpriteMed2" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="SpriteSmall1" type="Sprite" parent="."]
position = Vector2( 14, -11 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="SpriteSmall2" type="Sprite" parent="."]
position = Vector2( -14, 12 )
scale = Vector2( 0.799999, 0.799999 )
texture = ExtResource( 1 )

[node name="SpriteTiny1" type="Sprite" parent="."]
position = Vector2( 10, 9 )
texture = ExtResource( 4 )

[node name="SpriteTiny2" type="Sprite" parent="."]
position = Vector2( -15, -12 )
texture = ExtResource( 5 )

[node name="DestruccionAnimation" type="AnimationPlayer" parent="."]
anims/destruccion_1 = SubResource( 2 )
anims/destruccion_2 = SubResource( 2 )

[node name="DestruccionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="animation_finished" from="DestruccionAnimation" to="." method="_on_DestruccionAnimation_animation_finished"]
